# 26-spring-cpp-group

./: .gitignore  AGENTS.md  README.md  cheatsheet.md  scripts_cheat_sheet.md  update_dialogues.py
.github/workflows/: auto-build.yml  pr-check.yml
attachments/: 2026程序设计课程设计大作业要求.docx  2026程序设计课程设计大作业要求.md  报告模板.docx
campus-rpg/: CMakeLists.txt  CMakePresets.json
campus-rpg/docs/: README.md  architecture.md  core.md  data.md  engine.md  manager.md  persona4_design.md  roadmap.md  social_link_api.md  ui.md
campus-rpg/src/: main.cpp
campus-rpg/src/core/: Affinity.h  BattleSystem.cpp  BattleSystem.h  Character.cpp  Character.h  Element.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  MiscItem.cpp  MiscItem.h  Persona.cpp  Persona.h  Quest.cpp  Quest.h  QuestManager.cpp  QuestManager.h  Shop.cpp  Shop.h  Skill.cpp  Skill.h  SocialLink.cpp  SocialLink.h  SocialLinkManager.cpp  SocialLinkManager.h  Tile.h  TileMap.cpp  TileMap.h
campus-rpg/src/data/: DatabaseManager.cpp  DatabaseManager.h  SaveRepository.cpp  SaveRepository.h
campus-rpg/src/engine/interfaces/: EngineTypes.h  IAudio.h  IInput.h  IRenderer.h  IScene.h  IWindow.h
campus-rpg/src/engine/sfml/: SfmlInput.cpp  SfmlInput.h  SfmlRenderer.cpp  SfmlRenderer.h  SfmlWindow.cpp  SfmlWindow.h
campus-rpg/src/manager/: GameManager.cpp  GameManager.h
campus-rpg/src/scenes/: ArmoryScene.cpp  ArmoryScene.h  BattleScene.cpp  BattleScene.h  CharacterScene.cpp  CharacterScene.h  DebugCheatScene.cpp  DebugCheatScene.h  DialogueScene.cpp  DialogueScene.h  FinalBossIntroScene.cpp  FinalBossIntroScene.h  GameCompleteScene.cpp  GameCompleteScene.h  HeroSelectScene.cpp  HeroSelectScene.h  InventoryScene.cpp  InventoryScene.h  LevelUpScene.cpp  LevelUpScene.h  NightScene.cpp  NightScene.h  PauseMenuScene.cpp  PauseMenuScene.h  QuestScene.cpp  QuestScene.h  RestConfirmScene.cpp  RestConfirmScene.h  SaveSlotScene.cpp  SaveSlotScene.h  ShopScene.cpp  ShopScene.h  SocialLinkScene.cpp  SocialLinkScene.h  StatusScene.cpp  StatusScene.h  TitleScene.cpp  TitleScene.h  TownMapData.h  TownScene.cpp  (+1 more)
campus-rpg/src/ui/: BattlePage.cpp  BattlePage.h  BattlePage.ui  CharacterPage.cpp  CharacterPage.h  CharacterPage.ui  InventoryPage.cpp  InventoryPage.h  InventoryPage.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  QuestPage.cpp  QuestPage.h  QuestPage.ui  ShopPage.cpp  ShopPage.h  ShopPage.ui
campus-rpg/tests/: CMakeLists.txt  test_core.cpp  test_levelup.cpp  test_save.cpp
campus-rpg/tests/mocks/: MockInput.cpp  MockInput.h  MockRenderer.cpp  MockRenderer.h  MockWindow.cpp  MockWindow.h
handouts/: 报告_黄焖鸡.docx
handouts/checkpoint1/: 项目甘特图.mmd  预计完成挑战任务.md
handouts/checkpoint1/zch/: 1.ppt
handouts/checkpoint2/: UML类图.mmd  checkpoint2.md
handouts/slide4pre/: package.json  slides.md
